<resources>
    <string name="app_name">ICDS CALCULATOR</string>
    <string name="class_1">ডিমের ঝোল এবং ভাত (বিভাগ-১)</string>
    <string name="class_2">ভাত, ডাল, সব্জী এবং সয়াবিন/ খেচুড়ি  (বিভাগ-২)</string>
    <string name="bnf_number">বেনিফিসারির সংখ্যা</string>
    <string name="pw_l">গর্ভবতী ও প্রসূতি</string>
    <string name="severe_child">অপুষ্ট শিশু</string>
    <string name="gnl_child_cst">সাধারণ শিশুর খরচ</string>
    <string name="severe_child_cst">অপুষ্ট শিশুর খরচ</string>
    <string name="gnl_child">সাধারণ শিশু</string>
    <string name="total_bnf">মোট বেনিফিসারি</string>
    <string name="egg_cost">ডিমের খরচ</string>
    <string name="egg_tot_cost">ডিমের মোট খরচ</string>
    <string name="vag_sya_cost">সব্জী, সয়াবিন এর বরাদ্দ</string>
    <string name="egg_sya_total_cost">ডিম সব্জী এবং সয়াবিন - এর মোট খরচ</string>
    <string name="egg_veg_all_total_cost">ডিম সব্জী এবং সয়াবিন - এর মোট খরচ</string>
    <string name="bnf_morning_slk">বেনিফিসারি সংখ্যা সকালের জল খাবার</string>
    <string name="ctu_sugar_cost">ছাতু + চিনির খরচ</string>
    <string name="ctu_sugar_total_cost2">ছাতু ও চিনির মোট খরচ</string>
    <string name="all_total_cost">সব্জী, সয়াবিন, ডিম, ছাতু, চিনি এবং অন্যান্য মোট খরচ</string>
    <string name="pto_cost">অনন্যা ও আলুর  খরচ</string>
    <string name="pto_cost2">অনন্যা ও আলুর মোট খরচ</string>
    <string name="egg_pto_total_cost">ডিম, আলু ও অন্যান্যর মোট খরচ</string>
    <string name="all_total_cost1">আলু + ডিম + ছাতু + চিনির মোট খরচ</string>

    <string name="reg2_1">পরিপূরক আহারের খাদ্য সামগ্রী দৈনন্দিন খরচ ও মজুতের বিবরণ</string>
    <string name="reg2_m_hed1">পরিকল্পিত রেশনে সংখ্যা</string>
    <string name="reg2_hed1">রান্না করা গরম খাবার / প্রকল্প থেকে দেওয়ার তৈরি খাবার</string>
    <string name="woman">মহিলা</string>
    <string name="otherChild">অনন্যা শিশু</string>
    <string name="ext_severe_child">অত্যন্ত কম ওজনের শিশু</string>
    <string name="thr">বাড়িতে নিয়ে যাওয়ার জন্য খাবার (THR)</string>
    <string name="pod1">খাদ্য সামগ্রী - ১ (চাল)</string>
    <string name="pod2">খাদ্য সামগ্রী - ২  (ডাল)</string>
    <string name="pod3">খাদ্য সামগ্রী - ৩ (তেল)</string>
    <string name="pod4">খাদ্য সামগ্রী - ৪ (নুন)</string>
    <string name="pod5">খাদ্য সামগ্রী - ৫ (সয়াবিন/অন্যান্য)</string>
    <string name="cost">খরচ</string>
    <string name="ins_tock">মজুত</string>
    <string name="class_1_1">ডিমের ঝোল এবং ভাত</string>
    <string name="class_2_2">ভাত, ডাল, সব্জী এবং সয়াবিন/ খেচুড়ি </string>
    <string name="name">name</string>


</resources>