<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="9dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_2"
            android:layout_margin="3dp"
            android:textAlignment="center"
            android:background="@color/btn"
            android:textColor="@color/white"
            android:textSize = "20dp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bnf_number"
            android:layout_margin="3dp"
            android:textSize = "20dp"
            android:textStyle="bold">
        </TextView>
        <TableRow
            android:background="#046B5F"
            android:padding="10dp">

            <TextView
                android:layout_width="50dp"
                android:layout_height="34dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/pw_l"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/severe_child"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="87dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/gnl_child"
                android:textColor="@color/white"
                android:textStyle="bold" />


        </TableRow>
        <TableRow
            android:background="#F0F7F7"
            android:padding="5dp">

            <EditText
                android:id="@+id/inPow"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:hint="@string/pw_l"
                android:text=""
                android:inputType="number"/>

            <EditText
                android:id="@+id/inSev"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:hint="@string/severe_child"
                android:text=""
                android:inputType="number" />

            <EditText
                android:id="@+id/inGnl"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/gnl_child"
                android:text=""
                android:layout_width="wrap_content"
                android:inputType="number"
                />
        </TableRow>
        <Button
            android:id="@+id/cBtn"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="28dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CALCULATE"/>
        <TableRow
            android:layout_marginTop="10dp"
            android:background="#51B435"
            android:padding="10dp">
            <TextView
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/total_bnf"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </TableRow>
        <TableRow android:background="#F0F7F7" android:padding="5dp">
            <TextView
                android:id="@+id/TtlBnf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20dp"
                android:layout_margin="5dp"
                android:text="" />
        </TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_margin="3dp"
            android:text="@string/egg_cost"
            android:textSize = "20dp"
            android:textStyle="bold">
        </TextView>
        <TableRow
            android:background="#51B435"
            android:padding="10dp">
            <TextView
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pw_l"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/severe_child"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gnl_child"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/egg_tot_cost"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </TableRow>
        <TableRow
            android:background="#F0F7F7"
            android:padding="5dp">
            <TextView
                android:id="@+id/EggPwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="18dp"
                android:text="" />
            <TextView
                android:id="@+id/EggSevere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="18dp"
                android:text="" />
            <TextView
                android:id="@+id/EggGne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:layout_margin="5dp"
                android:text="" />
            <TextView
                android:id="@+id/EggTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="18dp"
                android:text="" />
        </TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vag_sya_cost"
            android:textSize = "20dp"
            android:paddingTop="10dp"
            android:textStyle="bold">
        </TextView>
        <TableRow
            android:background="#51B435"
            android:padding="10dp">

            <TextView
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/pw_l"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/severe_child"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gnl_child"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/vag_sya_cost"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </TableRow>
        <TableRow
            android:background="#F0F7F7"
            android:padding="5dp">
            <TextView
                android:id="@+id/vegPwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="18dp"
                android:text="" />
            <TextView
                android:id="@+id/vgeSevere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="18dp"
                android:text="" />
            <TextView
                android:id="@+id/vgeGne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="18dp"
                android:text="" />
            <TextView
                android:id="@+id/vegTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textSize="18dp"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="221dp"
            android:layout_marginTop="20dp"
            android:background="#51B435"
            android:padding="10dp">

            <TextView
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:text="@string/egg_veg_all_total_cost"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </TableRow>

        <TableRow android:background="#F0F7F7" android:padding="5dp">
            <TextView
                android:id="@+id/EggVegSoaTtl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:paddingBottom="5dp"
                android:layout_margin="5dp"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:textSize="21dp"
                android:text="" />
        </TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_margin="3dp"
            android:text="@string/bnf_morning_slk"
            android:textSize = "20dp"
            android:textStyle="bold">
        </TextView>
        <TableRow android:background="#51B435"
            android:padding="10dp">

            <TextView
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:text="@string/gnl_child"
                android:textColor="@color/white"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/severe_child"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:textStyle="bold" />



        </TableRow>
        <TableRow android:background="#F0F7F7" android:padding="5dp">
            <TextView
                android:id="@+id/GenMngSlsk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_margin="5dp"
                android:textSize="20dp"
                android:text="" />
            <TextView
                android:id="@+id/SevereMngSlsk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_margin="5dp"
                android:textSize="20dp"
                android:text="" />

        </TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_margin="3dp"
            android:text="@string/ctu_sugar_cost"
            android:textSize = "20dp"
            android:textStyle="bold">
        </TextView>
        <TableRow android:background="#51B435" android:padding="10dp">
            <TextView
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/gnl_child_cst"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/severe_child_cst"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </TableRow>
        <TableRow android:background="#F0F7F7" android:padding="5dp">
            <TextView
                android:id="@+id/CtatuSugGenCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_margin="5dp"
                android:textSize="20dp"
                android:text="" />
            <TextView
                android:id="@+id/ChatuSugSevereCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_margin="5dp"
                android:textSize="20dp"
                android:text="" />

        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:background="#51B435"
            android:padding="10dp">
            <TextView
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/ctu_sugar_total_cost2"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </TableRow>
        <TableRow android:background="#F0F7F7" android:padding="5dp">
            <TextView
                android:id="@+id/ChatuSugTtlcost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_margin="5dp"
                android:textSize="21dp"
                android:text="" />
        </TableRow>
        <TableRow
            android:layout_marginTop="10dp"
            android:background="#51B435"
            android:padding="10dp">
            <TextView
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/all_total_cost"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </TableRow>
        <TableRow android:background="#F0F7F7" android:padding="5dp">
            <TextView
                android:id="@+id/AllTtlcost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textStyle="bold"
                android:textSize="28dp"
                android:layout_margin="5dp"
                android:text="" />


        </TableRow>

        <Button
            android:id="@+id/RsetBtn"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:textSize="28dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CLEAR"/>
        <TableRow
            android:layout_marginTop="20dp"
            android:background="#046B5F"
            android:padding="10dp">
        </TableRow>
    </TableLayout>


</ScrollView>